# flare

./: .gitignore  CMakeLists.txt  Development.md  README.md
cmake/: FindProtobuf.cmake
src/: CMakeLists.txt
src/cli/: flare.cpp
src/flare/: CMakeLists.txt  flare.cpp
src/protos/: CMakeLists.txt  flare.proto
src/sol/: CMakeLists.txt  sol.cc
